apps/servarr/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      automountServiceAccountToken: false
      priorityClassName: low-priority
      enableServiceLinks: false
      containers:
        - name: prowlarr
          image: linuxserver/prowlarr:2.6.5
          ports:
            - name: http
              containerPort: 9696
              protocol: TCP
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
          resources:
            requests:
              memory: 128Mi
              cpu: 50m
            limits:
              memory: 512Mi
              cpu: 1000m
          livenessProbe:
            httpGet:
              path: /ping
              port: 9696
            periodSeconds: 30
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              path: /ping
              port: 9696
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /ping
              port: 9696
            periodSeconds: 10
            timeoutSeconds: 5

      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-local-config-pvc

      restartPolicy: Always
