apps/servarr/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9696
      targetPort: 9696
      protocol: TCP
  selector:
    app: prowlarr
